--- a/css/style.css
+++ b/css/style.css
@@ -89,13 +89,13 @@ header h1 {
   flex: 1;
   display: flex;
   flex-direction: column;
-  gap: 1.5em;
+  gap: 0.5em;
 }
 
 .text-section {
   color: #555;
   line-height: 1.4;
-  font-size: 1.3rem;
+  font-size: 0.7em;
 }
 
 .news {
@@ -104,7 +104,6 @@ header h1 {
   padding: 1em;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.08);
   overflow-y: auto;
-  max-height: 80%;
 }
 
 .news p {
